# agentic-automation-portfolio

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  PRD.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/dashboard/: main.py
docs/: INTERVIEW_GUIDE.md  PROJECT_STATUS.md  architecture.md
docs/decisions/: ADR-0001-monorepo.md  ADR-0002-langgraph.md  ADR-0003-runtime-abstraction.md  ADR-0004-environment-agnostic-development.md
docs/sales_pipeline/: ARCHITECTURE.md
docs/sprints/: sprint-0.md  sprint-1.md
projects/customer_support_escalation/: cli.py  graph.py  prompts.py  schemas.py  state.py  workflow.py
projects/document_compliance_checker/: graph.py  prompts.py  schemas.py  state.py  workflow.py
projects/sales_pipeline_manager/: agents.py  prompts.py  schemas.py  state.py
scripts/: README.md
shared/config/: settings.py
shared/llm_runtime/: base.py  exceptions.py  factory.py  ollama.py  parsing.py  tensorrt.py  vllm.py
shared/logging/: logger.py
shared/models/: enums.py
shared/state/: base.py
tests/: test_document_compliance_checker.py  test_logger.py  test_ollama_health.py  test_ollama_normalization.py  test_ollama_runtime.py  test_runtime_base.py  test_runtime_factory.py  test_runtime_parsing.py  test_settings.py  test_vllm_runtime.py
tests/contracts/: test_runtime_contract.py
tests/customer_support_escalation/: test_base_agent.py  test_classification_schema.py  test_classifier_agent.py  test_cli.py  test_cli_errors.py  test_graph.py  (+4 more)
(+9 files in other folders)
